# talentscout-hiring-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
config/: connect_db.py
tools/: main.py
workflows/: chat.py
